# rust-npm-utils

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  package-json.yml
crates/package_json/: Cargo.toml  README.md
crates/package_json/src/: lib.rs  lock.rs  spec.rs
examples/date-converter/: .gitignore  Cargo.toml  README.md
examples/date-converter/src/: main.rs
examples/date-converter/web/: date-converter.js  index.html  package.json
src/: cache.rs  download.rs  extract.rs  install.rs  integrity.rs  lib.rs  package_json.rs  path_safety.rs  project.rs  registry.rs  sbom.rs
src/audit/: mod.rs  npm.rs  osv.rs
src/cli/: add.rs  audit.rs  ci.rs  common.rs  download.rs  init.rs  install.rs  mod.rs  remove.rs  resolve.rs  sbom.rs  search.rs  upgrade.rs
src/install/: lockfile.rs  mod.rs  node_modules.rs
src/package_json/: lock.rs  manifest.rs  mod.rs  spec.rs
tests/: audit.rs  cli.rs
tests/fixtures/: npm-bulk-lodash.json  osv-GHSA-jf85-cpcp-j695.json
