[package]
name = "npm-utils"
version = "0.4.0"
authors = ["Stefan Grönke <stefan@gronke.net>"]
homepage = "https://github.com/gronke/rust-npm-utils"
repository = "https://github.com/gronke/rust-npm-utils"
description = "Pure-Rust utilities for the npm registry: resolve a package version, download npm tarballs and GitHub archives, and extract files."
categories = ["development-tools", "web-programming"]
keywords = ["npm", "registry", "tarball", "download"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
publish = true

[dependencies]
ureq = { version = "3.0", features = ["rustls"], default-features = false }
flate2 = "1.1"
tar = "0.4"
zip = { version = "7", default-features = false, features = ["deflate", "time"] }
serde_json = "1"
semver = "1"
# Verify each downloaded tarball's `sha512-<base64>` integrity — the registry's `dist.integrity`
# (`install::node_modules`) and the hash pinned in a package-lock.json (`install::from_lockfile`).
# npm-install / npm-ci-faithful. Small, widely-trusted crates, MSRV ≤ 1.77.2.
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[workspace]
members = ["examples/date-converter"]
