[package]
name = "npm-utils"
version = "0.5.3"
authors = ["Stefan Grönke <stefan@gronke.net>"]
homepage = "https://github.com/gronke/npm-utils"
repository = "https://github.com/gronke/npm-utils"
description = "Pure-Rust utilities for the npm registry: resolve a package version, download npm tarballs and GitHub archives, and extract files."
categories = ["development-tools", "web-programming"]
keywords = ["npm", "registry", "tarball", "download"]
license = "MIT"
edition = "2021"
rust-version = "1.88"   # floor set by the `time` dependency (MSRV 1.88); guarded by the CI msrv job
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[features]
# The `npm-utils` / `cargo-npm-utils` command-line tool (pure-Rust `npm install` / `ci` / `add` /
# `init` / `upgrade`). Opt-in so library consumers never pull `clap`: install the CLI with
# `cargo install npm-utils --features cli`.
cli = ["dep:clap"]

[dependencies]
ureq = { version = "3.0", features = ["rustls", "platform-verifier"], default-features = false }
flate2 = "1.1"
tar = "0.4"
zip = { version = "7", default-features = false, features = ["deflate", "time"] }
# `preserve_order` keeps JSON object keys in insertion order, so the manifest/lockfile writers
# (`package_json::manifest`, `package_json::lock::render_v3`) emit npm-faithful, stable key order
# rather than alphabetized — and editing a `package.json` keeps the user's field order intact.
serde_json = { version = "1", features = ["preserve_order"] }
semver = "1"
# Verify each downloaded tarball's `sha512-<base64>` integrity — the registry's `dist.integrity`
# (`install::node_modules`) and the hash pinned in a package-lock.json (`install::from_lockfile`).
# npm-install / npm-ci-faithful. Small, widely-trusted crates, well within the crate MSRV.
sha2 = "0.10"
base64 = "0.22"
# Format the SBOM generation timestamp as RFC 3339 (`sbom::now_rfc3339`). `time` is already in the
# tree (via `zip`); this only adds its `formatting` feature — no new dependency.
time = { version = "0.3", default-features = false, features = ["std", "formatting"] }

# CLI only (feature `cli`); optional, so a default library build skips it. clap and its deps build
# under the crate MSRV (1.88), which is set by `time`, not clap.
clap = { version = "4.5", features = ["derive"], optional = true }

# The CLI ships as two binaries from this one crate: `npm-utils <verb>` and, via cargo's
# `cargo-<name>` convention, `cargo npm-utils <verb>`. `cargo install npm-utils --features cli`
# installs both. Each requires the `cli` feature, so a default `cargo build` skips them.
[[bin]]
name = "npm-utils"
path = "src/bin/npm-utils.rs"
required-features = ["cli"]

[[bin]]
name = "cargo-npm-utils"
path = "src/bin/cargo-npm-utils.rs"
required-features = ["cli"]

[dev-dependencies]
tempfile = "3"

[workspace]
members = ["examples/date-converter"]
