[package]
name = "package_json"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Internal npm-utils crate: pure-Rust package.json + package-lock.json schemas, modeled on the npm specs."
license = "MIT"
publish = false

[dependencies]
serde_json = "1"
semver = "1"

[dev-dependencies]
tempfile = "3"
